@@ -1,3 +1,7 @@
+2018-03-27  Danilo Chang  <ray2501@gmail.com>
+
+    * generic/mdb.c: Update LMDB source code.
+
 2017-11-24  Danilo Chang  <ray2501@gmail.com>
 
     * Setup version to v0.3.6 to test
